--- a/notebook.Rmd
+++ b/notebook.Rmd
@@ -1,19 +1,23 @@
 ---
 title: "R Notebook"
-output: html_notebook
+output:
+  html_document:
+    highlight: haddock
+    theme: paper
 ---
 
-```{r, load}
-library(tidyverse);library(tidygraph);library(ggraph)
+```{r echo=FALSE, message=FALSE, warning=FALSE}
+library(tidyverse);library(tidygraph);library(tidytext);library(ggraph)
+knitr::opts_chunk$set(
+  fig.width=6,fig.asp = 0.618,dpi=300,echo=FALSE,message=FALSE,warning=FALSE
+)
 motifs <- feather::read_feather("data/motifs.feather")
 source("prep/motif_network.R")
 ```
 
-
 ```{r} 
-ntwk %>% activate(nodes) %>% as_tibble() %>% View()
+# ntwk %>% activate(nodes) %>% as_tibble() %>% View()
 ```
-
 
 # Trace a Concept in the Current Hierarchy
 
@@ -21,21 +25,54 @@ ntwk %>% activate(nodes) %>% as_tibble() %>% View()
 
 Given a particular term or phrase, can we show all nodes which match, as well as the parent nodes of these, branching back to the root?
 
+How might this work with more complex constellations of terms, like `rise(s) from dead|resurrect|back to life`, or `goddess|serpent` related to Marija Gimbutas' work, or `transfigur|transform|becomes|turns into`?
+
+```{r}
+
+```
+
+
+Can we display related search output of similar terms/concepts for comparison?  For instance, `resurrection` and `reincarnation`?
+
+```{r}
+
+```
+
+
 Options for display/exploration:
 
-- Use dendrogram of entire motif structure, and highlight the edges and nodes which match a given search (*Challenge: time to render whole shebang*)
-- Subset the graph dataframe and re-draw a new dendrogram with only the filtered nodes (*Challenge: How to keep parents -> root of selected nodes to keep entire tree/forest intact*)
+- Use dendrogram of entire motif structure (as either a transparent underlay or a dnesity cloud), and highlight the edges and nodes which match a given search (*Challenge: time to render whole shebang*)
 
-```{r, dpi = 320}
+
+- Subset the graph dataframe and re-draw a new dendrogram with only the filtered nodes
+
+In order to identify the portion of the overall tree which includes a set of terms, we need to identify not only the nodes which contain those search terms but also their parent nodes, all the way back to the root.^[This is done via the `trace_to_root()` convenience function defined here.]  This allows us to keep the main trunk of the tree intact and connect the disparate items that a search turns up.
+
+```{r}
+source('funs/trace_to_root.R')
+```
+
+
+```{r}
 ntwk %>%
-  activate(nodes) %>%
-  filter(str_detect(description,"God")) %>%
-  ggraph(layout = 'dendrogram', circular = F) + 
-  geom_edge_diagonal() +
+  activate(nodes) %>% 
+  filter(row %in% trace_to_root("Seal")) %>%
+  ggraph(layout = 'dendrogram', circular = T) + 
+  geom_edge_diagonal(alpha = 0.25) +
   geom_node_point(aes(colour = level)) +
+  geom_node_text(
+    aes(
+      label = ifelse(
+        level >= max(level) - 1, 
+        str_trunc(as.character(description),30,"right"), 
+        NA_character_
+      )
+    ),
+    repel = T,size = 2,alpha = 0.5
+  ) +
+  coord_fixed() +
   theme_void()
 
-# ggsave("sample.png", width=4, height=3, dpi = "retina")
 ```
 
 # Compare Traditions
@@ -44,7 +81,54 @@ ntwk %>%
 
 *How to extract structured fields from* `notes` *field for each country tagged?*
 
+Identify all traditions referenced in `note` field for tagging
+Make logical variables detecting presence of tradition in notes field (potentially using `purrr::map_`)
+
+```{r}
+traditions <-
+  df %>%
+  unnest_tokens(word, notes) %>%
+  group_by(word) %>% summarize(n = n()) %>%
+  filter(
+    word %in% c(
+      "india","hindu","indian","american",
+      "irish","celtic","ireland",
+      "arab","assyrian","turkish",
+      "jewish","hebrew","palestine","icelandic","icel","iceland","norse",
+      "italian","sicilian","africa","african","zulu","angola","rhodesia","cameroon","congo","nigeria","egypt","egyptian","yoruba","swahili","madagascar","togo","masai","surinam","bantu","liberia","senegambia",
+      "chinese","spanish","panama","columbia","ecuador",
+      "u.s","missouri","california","calif","georgia","zuñi","ojibwa","cherokee","blackfoot","apache","pueblo","cheyenne","iroquois","mexican","alaska","dakota","arapaho","choctaw","penobscot","hiawatha","tarahumare",
+      "korean","indies","nassau","zanzibar",
+      "indonesia","indonesian","fiji","maori","samoa","oceanic","oceania","melanesia","melanesian","polynesian","polynesia","micronesia","micronesian","honolulu","hawaiian","sumatra","malay","philippines","java","papuan","raratonga",
+      "canadian","canada","estonian","esthonian","swedish","scotch","scottish","britain","british","prussian",
+      "england","greek","lithuanian","latvian","rumanian","romania","slavic","eskimo","kodiak","austrian",
+      "french","france","danish","russian","bulgarian","slovenian","tahiti","tahltan","rarotonga","jamaica","flemish","burmese","circassian",
+      "siberian","swiss","scotland","persian","negro","brazil","peru","argentina","aztec","inca","amazon","hebrides","creole","haitian",
+      "finnish","norwegian","hawaii","japanese","buddhist","german",
+      "greenland","english","breton","hungarian","korea",
+      "wales","welsh","philippine","babylonian","armenian","australian","australia","araucanian","antigua","cyprus",
+      ###
+      "ikeda","malalasekera","fox","eddic","fang","guinea",
+      "nasreddin","anesaki","easter","cook","verde","bering","labrador","wakweli","jijena","crow","snorra","marshall","zealand","nederlandsche","nederlandsch","tlingit","ashanti","teton","yagua","sherente","tehuelche","tenetehara","berbères"
+    )
+  )
+
+tst %>%
+  ggplot(aes(x = fct_reorder(word,n), y = n)) +
+  geom_bar(stat = "identity")
+
+```
+
+
 ## Which motifs are common across multiple traditions?
+
+Visualize relationships across traditions using hierarchical edge bundling diagram (i.e. `geom_conn_bundle()`)
+
+```{r}
+
+```
+
+Visualize country coverage using coordinates of central city from a given civilization (*and radius based on extent of historical scope?*)
 
 ## Given a specific tradition, which others share the greatest number of motifs?
 
